# Escapist

./: CMakeLists.txt  General.h  README.md  main.cpp
Common/: ArrayList.h
Common/Internal/: TypeTrait.h
Escapist/: General.h
Escapist/Common/: ArrayList.h  ByteArray.h  Convert.h  HashMap.h  Point.h  Rect.h  Socket.h  String.h  Time.h
Escapist/Common/Internal/: TypeTrait.h
Escapist/GUI/: Application.cpp  Application.h  Entry.cpp  General.h  Window.h
Internal/: ReferenceCount.h  TypeTrait.h
escapist/: base.h  list.h  stack.h  string.h  time.h
